--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div id="root"></div>
 
     <!-- Start of LiveChat (www.livechat.com) code -->
-    <script type="module" src="/src/main.jsx">
+    <script src="/src/main.jsx">
       window.__lc = window.__lc || {};
       window.__lc.license = 18413730;
       window.__lc.integration_name = "manual_onboarding";
